Fixed some layout issues

--- a/web-app/src/app/app.component.scss
+++ b/web-app/src/app/app.component.scss
@@ -3,22 +3,22 @@
   padding: 30px;
 }
 
-.left_col,
-.right_col {
-  width: 48%;
+.row {
+  display: flex;
+
+  .col {
+
+    flex: 50%;
+  }
+}
+
+signature-pad {
+  background-color: green;
+
 
 }
 
-.left_col {
 
-  float: left;
-
-}
-
-.right_col {
-
-  float: right;
-}
 
 .example-form {
   width: 100%;
