--- a/web-app/src/styles.scss
+++ b/web-app/src/styles.scss
@@ -18,3 +18,7 @@ body {
 .example-full-width {
   width: 100%;
 }
+
+canvas {
+  border: red 1px solid;
+}
